force-app/main/default/objects/Corrective_Action__c/Corrective_Action__c.object-meta.xml
<CustomObject>
    <label>是正処置</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>是正処置番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>是正処置</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>