force-app/main/default/objects/Corrective_Action__c/fields/Actual_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Close_Date__c</fullName>
    <label>実完了日</label>
    <type>Date</type>
</CustomField>