force-app/main/default/objects/Corrective_Action__c/fields/BOM_Part__c.field-meta.xml
<CustomField>
    <fullName>BOM_Part__c</fullName>
    <label>原因部品</label>
    <type>Lookup</type>
    <referenceTo>BOM_Part__c</referenceTo>
    <relationshipLabel>是正処置</relationshipLabel>
    <relationshipName>Corrective_Actions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>