force-app/main/default/objects/Corrective_Action__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>ケース</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>是正処置</relationshipLabel>
    <relationshipName>Corrective_Actions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>