force-app/main/default/objects/Corrective_Action__c/fields/D1_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>D1_Completed_By__c</fullName>
    <label>D1 チーム編成 - 完了者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>D1_Completed_By</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>