force-app/main/default/objects/Corrective_Action__c/fields/D1_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>D1_Completed_Date__c</fullName>
    <label>D1 チーム編成 - 完了日時</label>
    <type>DateTime</type>
</CustomField>