force-app/main/default/objects/Corrective_Action__c/fields/D1_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>D1_Team_Members__c</fullName>
    <label>D1 チーム編成 - メンバー</label>
    <type>Html</type>
    <length>5000</length>
</CustomField>