force-app/main/default/objects/Corrective_Action__c/fields/D2_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>D2_Completed_By__c</fullName>
    <label>D2 問題記述 - 完了者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>D2_Completed_By</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>