force-app/main/default/objects/Corrective_Action__c/fields/D2_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>D2_Completed_Date__c</fullName>
    <label>D2 問題記述 - 完了日時</label>
    <type>DateTime</type>
</CustomField>