force-app/main/default/objects/Corrective_Action__c/fields/D2_Problem_Description__c.field-meta.xml
<CustomField>
    <fullName>D2_Problem_Description__c</fullName>
    <label>D2 問題の定義</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>