force-app/main/default/objects/Corrective_Action__c/fields/D3_Completed_By__c.field-meta.xml
<CustomField>
    <fullName>D3_Completed_By__c</fullName>
    <label>D3 暫定措置 - 完了者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>D3_Completed_By</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>