force-app/main/default/objects/Corrective_Action__c/fields/D3_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>D3_Completed_Date__c</fullName>
    <label>D3 暫定措置 - 完了日時</label>
    <type>DateTime</type>
</CustomField>