force-app/main/default/objects/Corrective_Action__c/fields/D3_Containment__c.field-meta.xml
<CustomField>
    <fullName>D3_Containment__c</fullName>
    <label>D3 暫定対応</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>