force-app/main/default/objects/Corrective_Action__c/fields/D4_Root_Cause__c.field-meta.xml
<CustomField>
    <fullName>D4_Root_Cause__c</fullName>
    <label>D4 原因分析</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>