force-app/main/default/objects/Corrective_Action__c/fields/D5_Permanent_Action__c.field-meta.xml
<CustomField>
    <fullName>D5_Permanent_Action__c</fullName>
    <label>D5 恒久対策</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>