force-app/main/default/objects/Corrective_Action__c/fields/D6_Verification__c.field-meta.xml
<CustomField>
    <fullName>D6_Verification__c</fullName>
    <label>D6 実施・検証結果</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>