force-app/main/default/objects/Corrective_Action__c/fields/D7_Prevention__c.field-meta.xml
<CustomField>
    <fullName>D7_Prevention__c</fullName>
    <label>D7 再発防止・水平展開</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>