force-app/main/default/objects/Corrective_Action__c/fields/Horizontal_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Horizontal_Deployment__c</fullName>
    <label>水平展開分析</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>