force-app/main/default/objects/Corrective_Action__c/fields/Impact_Scope__c.field-meta.xml
<CustomField>
    <fullName>Impact_Scope__c</fullName>
    <label>影響範囲キーワード</label>
    <description>水平展開検索用。原因部品番号、サプライヤー名、材料カテゴリ、工程種別など影響範囲を特定するキーワードを記録</description>
    <type>Text</type>
    <length>255</length>
</CustomField>