force-app/main/default/objects/Corrective_Action__c/fields/Knowledge_Created__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Created__c</fullName>
    <label>ナレッジ化済み</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>