force-app/main/default/objects/Corrective_Action__c/fields/Knowledge_Input__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Input__c</fullName>
    <label>ナレッジ化対象情報</label>
    <type>LongTextArea</type>
    <length>10000</length>
</CustomField>