force-app/main/default/objects/Corrective_Action__c/fields/Parent_CA__c.field-meta.xml
<CustomField>
    <fullName>Parent_CA__c</fullName>
    <label>親是正処置</label>
    <description>水平展開で派生した是正処置の場合、元の是正処置を参照</description>
    <type>Lookup</type>
    <referenceTo>Corrective_Action__c</referenceTo>
    <relationshipLabel>派生是正処置</relationshipLabel>
    <relationshipName>Derived_Actions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>