force-app/main/default/objects/Corrective_Action__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>対象製品</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>是正処置</relationshipLabel>
    <relationshipName>Corrective_Actions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>