force-app/main/default/objects/Corrective_Action__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <label>重大度</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>重大</fullName><default>false</default><label>重大</label></value>
            <value><fullName>重要</fullName><default>false</default><label>重要</label></value>
            <value><fullName>軽微</fullName><default>false</default><label>軽微</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>