force-app/main/default/objects/Corrective_Action__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>原因サプライヤー</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>是正処置（原因サプライヤー）</relationshipLabel>
    <relationshipName>Corrective_Actions_Supplier</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>