force-app/main/default/objects/Corrective_Action__c/fields/Target_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Target_Close_Date__c</fullName>
    <label>目標完了日</label>
    <type>Date</type>
</CustomField>