force-app/main/default/objects/Corrective_Action__c/fields/Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead__c</fullName>
    <label>チームリーダー</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>是正処置（リーダー）</relationshipLabel>
    <relationshipName>Corrective_Actions_Lead</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>